fixing jumping boxes

--- a/main.css
+++ b/main.css
@@ -1,8 +1,52 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 body {
 	min-width: 900px;
 }
 
 nav{
+	margin-top: 15px;
 	padding-right: 48px;
 }
 
@@ -31,15 +75,22 @@ nav li{
 	padding-top: 50px;
 	margin-right: auto;
 	margin-left: auto;
+	margin-bottom: 30px;
 }
 #Main {
 	font-family: 'CrimsonSemiBold','Times New Roman', serif;
 	font-size: 55px;
 	text-align: center;
+	margin-bottom: 40px;
 }
 span {
 	color:#18afe0;
 	text-decoration: underline;
+}
+#jump {
+	margin-right: auto;
+	margin-left: auto;
+	height: 190px;
 }
 
 #B {
@@ -47,24 +98,29 @@ span {
 	font-size: 44px;
 	text-align: center;
 	color:black;
+	margin-bottom: 40px;
 }
 #H {
 	font-family: 'CrimsonSemiBold','Times New Roman',serif;
 	font-size: 44px;
 	text-align: center;
 	color:black;
+	margin-bottom: 40px;
 }
 #C {
 	font-family: 'CrimsonSemiBold','Times New Roman',serif;
 	font-size: 44px;
 	text-align: center;
 	color:black;
+	margin-bottom: 40px;
 }
 #first{
 	font-family: 'CrimsonSemiBold','Times New Roman', serif;
-	font-size: 18px;
+	font-size: 19px;
 	text-align: center;
 	margin-top: -20px;
+	margin-bottom: 20px;
+	font-weight: bold;
 }
 #B2 {
 	margin-top: -15px;
